<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="konnov.commr.vk.quadraticequationsolver.MainActivity">

    <Button
        android:textColor="@color/clearButtonRedColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearBtn"
        android:layout_alignTop="@+id/resultBtn"
        android:layout_alignRight="@+id/equals_zero"
        android:layout_alignEnd="@+id/equals_zero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/resultBtn"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/first_number"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberSigned|numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/x2"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/first_number"
        android:layout_toRightOf="@+id/first_number"
        android:layout_toEndOf="@+id/first_number" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/second_number"
        android:inputType="numberSigned|numberDecimal"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/x"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/second_number"
        android:layout_toRightOf="@+id/second_number"
        android:layout_toEndOf="@+id/second_number" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/third_number"
        android:layout_above="@+id/textView3"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:inputType="numberSigned|numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/discriminant_output"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/resultBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/roots_output"
        android:layout_marginTop="76dp"
        android:layout_below="@+id/discriminant_output"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/equals_zero"
        android:id="@+id/equals_zero"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/third_number"
        android:layout_toEndOf="@+id/third_number" />

</RelativeLayout>
